# Avicenna

./: .env.template  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: deploy-docs.yml
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/components/: Architecture.astro  Features.astro  Footer.astro  Hero.astro  Navigation.astro  QuickStart.astro  Skills.astro  TokenSavings.astro  Tools.astro  UseCases.astro
docs/src/layouts/: Layout.astro
docs/src/pages/: index.astro
docs/src/styles/: global.css
skills/avicenna-usage/: SKILL.md
src/avicenna/: __init__.py  __main__.py  cli.py
src/avicenna/advisor/: formatter.py  loader.py  matcher.py  models.py  registry.py
src/avicenna/advisor/skills/django/: SKILL.md
src/avicenna/advisor/skills/react/: SKILL.md
src/avicenna/advisor/skills/solid-principles/: SKILL.md
src/avicenna/advisor/skills/strategy-pattern/: SKILL.md
src/avicenna/config/: settings.py
src/avicenna/graph/: engines.py  ingester.py  query_builder.py  searcher.py  sqlite_graph.py
src/avicenna/indexer/: file_discovery.py  file_hasher.py  incremental_state.py  repository_indexer.py  watcher.py
src/avicenna/models/: code_entities.py
src/avicenna/parser/: languages.py  tree_sitter_parser.py
src/avicenna/parser/queries/: javascript.py  python_queries.py  typescript.py
src/avicenna/server/: formatters.py  mcp_server.py  tools.py
src/avicenna/stats/: tracker.py
tests/: test_sqlite_graph.py
